# sanna

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  generate_golden.py  pyproject.toml
.github/workflows/: ci.yml
docs/: reasoning-receipts.md
examples/: CLAUDE_DESKTOP_SETUP.md  README.md  customer_support_constitution.yaml  fleet_governance_demo.py  gateway_demo.py  governance_lifecycle_demo.py  three_constitutions_demo.py
examples/constitutions/: claude-code-standard.yaml  cowork-team.yaml  openclaw-developer.yaml  openclaw-personal.yaml  permissive_support_agent.yaml  (+2 more)
spec/: receipt.schema.json
tests/: STRESS_TEST_RESULTS.md  test_approval.py  test_authority.py  test_bundle.py  test_bundle_approval.py  test_constitution.py  test_constitution_diff.py  test_constitution_lifecycle.py  test_constitution_v11.py  test_drift.py  test_drift_timestamps.py  test_enforcement.py  test_evaluators.py  test_evaluators_llm.py  test_export.py  test_fleet_demo.py  test_gateway_config.py  test_gateway_constitution_sig.py  test_gateway_enforcement.py  test_gateway_escalation.py  test_gateway_hardening.py  test_gateway_mcp_client.py  test_gateway_migrate.py  test_gateway_reasoning.py  test_gateway_server.py  test_golden.py  test_governance_lifecycle.py  test_halt_event.py  test_hardening.py  test_identity_claims.py  test_llm_integration.py  test_mcp_server.py  test_middleware.py  test_otel_exporter.py  test_reasoning_example_config.py  test_reasoning_receipt_signing.py  test_store.py  test_stress.py  test_template_matrix.py  test_v061.py  (+3 more)
(+65 files in other folders)
